# lancedb_mcp

./: .gitignore  README.md  build-progress.md  example_usage.py  main.py  mcp-build.md  pyproject.toml  requirements.txt  setup_dev.sh
src/: __init__.py  cli.py  config.py
src/db/: __init__.py
src/document_processing/: __init__.py
src/embedding/: __init__.py
src/server/: __init__.py
src/utils/: __init__.py
tests/: test_mcp_rag.py
